# gh-trend-reporter

./: .coverage  .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 2026-W14-gemini-2.5-flash.md  2026-W14-qwen2.5-14b.md  2026-W14-qwen2.5-7b.md
prompts/: agent_system.txt  report_format.txt
scripts/: run_phases.sh
specs/: CLAUDE_CODE_PROMPTS.md  SPEC.md  TEST_SPEC.md
src/gh_trend_reporter/: __init__.py  agent.py  cli.py  config.py  database.py  github_api.py  models.py  rate_limiter.py  reporter.py  scraper.py
tests/: conftest.py  test_agent.py  test_cli.py  test_database.py  test_github_api.py  test_integration.py  test_reporter.py  test_scraper.py
tests/fixtures/: repo_detail.json  trending_daily.html  trending_empty.html  trending_weekly.html
